tests/m1/negative/generic_enum_unknown_type_arg.ax
module generic_enum_unknown_type_arg;

enum Option<T>: u8 {
    none = 0,
    some(T) = 1,
}

fn main() -> i32 {
    let value: Option<Missing> = Option.none;
    return 0;
}
